[gd_scene load_steps=2 format=2]

[ext_resource path="res://script/Pacientes.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 167.0
margin_top = 153.0
margin_right = 863.0
margin_bottom = 602.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = -10

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.396078, 0.819608, 1 )

[node name="button_create" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -218.5
margin_right = 218.5
margin_bottom = 92.0
text = "criar"

[node name="Button_exit" type="Button" parent="."]
margin_left = 865.0
margin_top = 525.0
margin_right = 1006.0
margin_bottom = 587.0
text = "Voltar"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -225.0
margin_right = 225.0
margin_bottom = 225.0
color = Color( 0.952941, 0.0941176, 0.960784, 1 )

[node name="LineEdit" type="LineEdit" parent="CanvasLayer"]
margin_left = 413.0
margin_top = 229.0
margin_right = 624.0
margin_bottom = 273.0

[node name="LineEdit2" type="LineEdit" parent="CanvasLayer"]
margin_left = 413.0
margin_top = 323.0
margin_right = 624.0
margin_bottom = 367.0

[node name="button_add" type="Button" parent="CanvasLayer"]
margin_left = 317.0
margin_top = 440.0
margin_right = 708.0
margin_bottom = 509.0
text = "adicionar"

[node name="CanvasLayer3" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -198.0
margin_top = -227.5
margin_right = 198.0
margin_bottom = 227.5
color = Color( 0.952941, 0.0941176, 0.960784, 1 )

[node name="LineEdit" type="LineEdit" parent="CanvasLayer3/ColorRect"]
margin_left = 41.0
margin_top = 72.5
margin_right = 345.0
margin_bottom = 126.5

[node name="LineEdit2" type="LineEdit" parent="CanvasLayer3/ColorRect"]
margin_left = 41.0
margin_top = 193.5
margin_right = 345.0
margin_bottom = 247.5

[node name="Buttonconfirmedit" type="Button" parent="CanvasLayer3/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.0
margin_top = 128.0
margin_right = 132.0
margin_bottom = 204.0
shortcut_in_tooltip = false
text = "confirmar edição"

[connection signal="pressed" from="button_create" to="." method="_on_button_create_pressed"]
[connection signal="pressed" from="Button_exit" to="." method="_on_Button_exit_pressed"]
[connection signal="pressed" from="CanvasLayer/button_add" to="." method="_on_button_add_pressed"]
[connection signal="pressed" from="CanvasLayer3/ColorRect/Buttonconfirmedit" to="." method="_on_Buttonconfirmedit_pressed"]
